--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
+            android:name=".ui.PetunjukPenggunaan"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Dapus"
+            android:exported="false" />
+        <activity
             android:name=".ui.Glosarium"
             android:exported="false" />
         <activity
