--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
+        debug{
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
+            crunchPngs false
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
